# createsuite

./: .dockerignore  .gitignore  .npmrc  .opencode.json  .prettierignore  AGENTS.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  OPENAI_AUTH.md  PROVIDER_SETUP.md  PROVIDER_SETUP_DEMO.md  README.md  TESTING.md  agent-skills.json  eslint.config.js  netlify.toml  package-lock.json  package.json  playwright.config.ts  session-ses_2f97.md  session-ses_3222.md  setup-workspace.sh  tsconfig.json  vitest.config.ts
.createsuite/: boulder.json
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
agent-ui/: .dockerignore  Dockerfile  README.md  fly.toml  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
backend/: AGENTS.md  README.md  mix.exs
diagrams/rust-diagrams/: Cargo.toml  README.md
diagrams/rust-diagrams/benches/: render_bench.rs
diagrams/rust-diagrams/examples/: architecture_basic.rs  elixir_agent_disconnect.rs  sequence_example.rs
diagrams/rust-diagrams/outputs/: disconnect-analysis.json  elixir-agent-disconnect.html
diagrams/rust-diagrams/src/: lib.rs  wasm.rs
diagrams/rust-diagrams/src/diagram_types/: mod.rs
diagrams/rust-diagrams/src/disconnect/: mod.rs
diagrams/rust-diagrams/src/engine/: mod.rs
diagrams/rust-diagrams/src/export/: mod.rs
diagrams/rust-diagrams/src/shapes/: mod.rs
diagrams/rust-diagrams/src/typescript/: index.ts  pure-js.ts
docs/: IMPLEMENTATION_SUMMARY.md  README.md  sprint_summary_docs.md
public/: index.html
remotion/: README.md  package.json
scripts/: capture-background-check.js  (+4 more)
(+265 files in other folders)
