[package]
name = "rust-diagrams"
version = "0.1.0"
edition = "2021"
authors = ["CreateSuite Team"]
description = "High-performance technical diagram generation for accuracy, visualization, and performance"
license = "MIT"
repository = "https://github.com/awelcing-alm/createsuite"
keywords = ["diagram", "visualization", "architecture", "sequence-diagram", "flowchart", "svg", "technical-drawing"]
categories = ["visualization", "graphics", "gui", "web-programming"]

[lib]
name = "rust_diagrams"
crate-type = ["lib", "cdylib", "rlib"]

[[bin]]
name = "diagram-cli"
path = "src/bin/cli.rs"

[[example]]
name = "elixir_agent_disconnect"
path = "examples/elixir_agent_disconnect.rs"

[[example]]
name = "architecture_basic"
path = "examples/architecture_basic.rs"

[[example]]
name = "sequence_example"
path = "examples/sequence_example.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
parking_lot = "0.12"
rayon = "1.8"
itoa = "1.0"
ryu = "1.0"
base64 = "0.21"
uuid-simd = "0.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5"
png = "0.17"
svg = "0.13"

[features]
default = ["svg-export"]
svg-export = []
wasm = ["dep:wasm-bindgen"]

[[bench]]
name = "render_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
